# tad

./: .gitignore  CMakeLists.txt  LICENSE  README.md  requirements.txt
config/: tad.cfg.example
include/: srl.hpp
include/concurrent/: Cache.hpp  FilesystemCache.hpp  Mutex.hpp  MutexLocker.hpp  Queue.hpp  RateLimiter.hpp  RateMonitor.hpp  SharedMemory.hpp  Thread.hpp  Time.hpp  UniqueQueue.hpp
include/network/: Port.hpp  TCPPort.hpp
include/srl/: BuiltinMessageFactory.hpp  BuiltinServiceProvider.hpp  CallbackConnection.hpp  CallbackInterface.hpp  CommunicationInterface.hpp  Connection.hpp  Controller.hpp  Log.hpp  LoopbackConnection.hpp  Message.hpp  Router.hpp  ServiceProvider.hpp  TCPConnection.hpp  TCPInterface.hpp
python/: CMakeLists.txt
python/SRL/: CHANGES.txt  CMakeLists.txt  LICENSE.txt  README.txt  setup.py
python/SRL/srl/: __init__.py
samples/: CMakeLists.txt  test.cpp
samples/client/: client.py  run-client
samples/cpp-server/: CMakeLists.txt
samples/docker/: Dockerfile  README.md  build-docker  run-docker
samples/docker-service/: CMakeLists.txt  Dockerfile  LICENSE  build-docker  copy-files.sh  run-docker
samples/docker-service/guest-cfg/: copy-files.sh
samples/docker-service/guest-cfg/xdata/: hdfs-site.xml  hive-site.xml  hosts  mapred-site.xml
samples/docker-service/service-scripts/: run  run-cpp-server  run-event-detector  stop
samples/docker/guest-cfg/: copy-files.sh
samples/docker/guest-cfg/memex/: hive-site.xml  hosts  resolv.conf
samples/docker/guest-cfg/xdata/: core-site.xml  yarn-site.xml
samples/docker/service-scripts/: run  run-cpp-server  run-hive-server  run-tad
samples/python-classifier/: classifier_service.py  srl.py  srl_classifier.py
samples/python-classifier-client/: client.py
samples/python-classifier-service/: classifier_service.py
samples/python-classifier-service/package/: setup.py
samples/python-classifier-service/package/srl_classifier/: __init__.py
samples/python-eventdetector-client/: client.py  run-client
samples/python-eventdetector-service/: CMakeLists.txt  event_detector.py  event_detector_service.py  test.py
samples/python-eventdetector-service/package/srl_event_detector/: __init__.py
samples/python-service/: service.py  srl.py
service/: build_query_elasticsearch.py  es_query_generator.py  event_detector.py  location_matches.py  start_service  start_worker  tad.py
service/package/: setup.py
service/package/srl_event_detector/: __init__.py
src/: BuiltinServiceProvider.cpp  CallbackInterface.cpp  CommIF.cpp  Controller.cpp  Log.cpp  Message.cpp  Router.cpp  ServiceProvider.cpp  TCPInterface.cpp  Test.cpp
src/concurrent/: FilesystemCache.cpp  Mutex.cpp  SharedMemory.cpp  Thread.cpp  Time.cpp
src/network/: Port.cpp  TCPClientSocket.cpp  TCPServerSocket.cpp
